apps/2fauth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2fauth
  namespace: 2fauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: 2fauth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 2fauth
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: 2fauth
          image: 2fauth/2fauth:6.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /2fauth
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: 2fauth-data
