apps/2fauth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 2fauth
  namespace: 2fauth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: 2fauth
  ports:
    - name: http
      port: 80
      targetPort: http
