apps/2fauth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2fauth
  namespace: 2fauth
  annotations:
    cert-manager.io/cluster-issuer: ${default_cluster_issuer}
    external-dns.alpha.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: 2fauth.${delegating_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: 2fauth
                port:
                  number: 80
  tls:
    - secretName: 2fauth-tls
      hosts:
        - 2fauth.${delegating_domain}
